<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".views.CartActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cartEditCouponCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cartItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cartEditCouponCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/foodItem_startEnd_margin"
        android:hint="@string/coupon_code"
        app:layout_constraintBottom_toTopOf="@id/cartTotalView"
        app:layout_constraintEnd_toStartOf="@id/cartCouponApply"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cartCouponApply"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/foodItem_startEnd_margin"
        android:enabled="false"
        android:text="@string/apply"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/cartTotalView"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/delivery_charge_rs_30"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/foodItem_startEnd_margin"
        android:layout_marginLeft="@dimen/foodItem_startEnd_margin"
        app:layout_constraintTop_toTopOf="@id/cartTotalView"
        app:layout_constraintEnd_toStartOf="@id/totalTextView"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/totalTextView"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/foodItem_startEnd_margin"
        android:layout_marginLeft="@dimen/foodItem_startEnd_margin"
        android:gravity="end"
        android:text="@string/total"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cartTotalView"
        app:layout_constraintEnd_toStartOf="@id/cartTotalView"
        app:layout_constraintTop_toTopOf="@id/cartTotalView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cartTotalView"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/foodItem_startEnd_margin"
        android:layout_marginEnd="@dimen/foodItem_startEnd_margin"
        android:layout_marginRight="@dimen/foodItem_startEnd_margin"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cartPay"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cartPay"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/foodItem_startEnd_margin"
        android:text="@string/proceed_to_pay"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>